# STUDYMAPv2

./: .gitignore  CMakeLists.txt  README.md  grade_sheet.csv  run_studymap.bat
Databases/: Uni.csv  Users.csv  datast.csv  grade_sheet.csv
Databases/Answers/: Allan.csv  Q.csv  T.csv  Trickster.csv  Z.csv  as.csv  as64.csv  asErSej.csv  kjellu.csv
Databases/Answers/Allan/: 2023-12-12-08-22-40.csv
Databases/Answers/drbsrtwrtb/: 2023-12-12-09-59-14.csv
Databases/Answers/kjelle/: 09-40-10-11-12-2023.csv
Databases/Answers/kjellu/: 15-52-23-10-12-2023.csv
Databases/Answers/larsen/: 2023-12-12-08-25-45.csv
Databases/Edu_data/: Computer Science.csv  Computer Technology.csv  Data Science and ML.csv  Design and application of AI.csv  Electronic and System Design.csv  Electronics Diploma engineer.csv  Health technology.csv  Information Technology.csv  Innovation and digitalization.csv  Interaction Design.csv  Mathematics technology.csv  Mediaology.csv  Robotics.csv  Software Engineering.csv
Databases/Results/Allan/: 2023-12-12-08-22-40.csv
Databases/Results/Trickster/: 09-30-12-07-12-2023.csv
Databases/Results/aethwrtn/: 2023-12-12-09-58-40.csv
Databases/Results/kjellu/: 55-53-10-11-12-2023.csv
Databases/Results/larsen/: 2023-12-12-08-25-45.csv
Databases/Users/: Users.csv
src/: CMakeLists.txt  Grade Sheet.c  Grade_Sheet.c  Grade_Sheet.h  Grade_sheet.c  Grade_sheet.h  KNN.c  KNN.h  Main_menu.c  Main_menu.h  Output.c  Output.h  Questionnaire.c  Questionnaire.h  Registration.c  Registration.h  Results.c  Results.h  STUDYMAP.c  data_collection.c  data_collection.h  load_profile.c  load_profile.h  questionnaire.c  questionnaire.h
test/: CMakeLists.txt  KNN_test.c
